examples/test/testpolicy14317.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14317
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key1: value20
      key28: value42
      key34: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value0
          key33: value46
      podSelector:
        matchLabels:
          key12: value46
          key22: value16
